# Bussola-Publica-Pipeline-de-Inteligencia-Legislativa-com-IA

./: .env.example  .gitignore  2_subir_n8n.ps1  API_CamaraDeputados.py  API_CamaraDeputados_Partidos.py  API_CamaraDeputados_Proposicoes.py  API_CamaraDeputados_Votacoes.py  Apresentação executiva.pptx  Bussola_Publica_Pitch.pptx  Desafio_Etapa4_IA.py  Desafio_Etapa_1.py  Desafio_Etapa_2.py  Dockerfile  LEIA-ME.md  LICENSE  README.md  SKILL_Eng_Dados_IA_Python.md  classificacao_tematica.py  diagnostico_etapa4.py  docker-compose.yml  etapa3_transformacao.py  main.py  main2.py  modelo_dados.md  pyproject.toml  requirements.txt  setup_etapa4.py
docs/: Etapa5_Documentacao_Tecnica.md  GUIA_GIT_COMMITS.md  GUIA_IMPORTACAO_n8n.md  README_snippet_Etapa5.md  SETUP_n8n_WINDOWS.md  modelo_dados.md
docs/apresentacoes/: Bussola_Publica_Pitch.pptx
docs/power-BI/: legislativoProjeto.pbix
n8n/: GUIA_IMPORTACAO_n8n.md  bussola_publica_ingestao_diaria.json  bussola_publica_ingestao_diaria_WINDOWS.json
scripts/: 1_instalar_docker.ps1  build_deck.js
scripts/extraction/01_deputados/: API_CamaraDeputados.py  API_DetalhesDeputados.py
scripts/extraction/02_partidos/: API_CamaraDeputados_Partidos.py  Api_DetalhesPartidos.py
scripts/extraction/03_proposicoes/: API_CamaraDeputados_Proposicoes.py  API_DetalhesProposicoes.py
scripts/extraction/04_votacoes/: API_CamaraDeputados_Votacoes.py  API_DetalhesVotos.py
src/: ai_layer.py  classificacao_tematica.py  config.py  diagnostico.py  extraction.py  transformation.py  transformers.py
workflows/: bussola_publica_ingestao_diaria.json
