[project]
name = "bussola-publica-pipeline-de-inteligencia-legislativa-com-ia"
version = "0.1.0"
description = ""
authors = [
    {name = "Micael Lima ",email = "131397330+micaellimaj@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "openai (>=2.40.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
